log
vi., 18 de mar. de 2022 15:11:42: 
 list.c | 42 +++++++++++++++++++++++++++++++++++++-----
 1 file changed, 37 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:78:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
76b716b
vi., 18 de mar. de 2022 15:12:25: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  9|3
total_score: 35/70
8a267fe
vi., 18 de mar. de 2022 15:14:58: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:78:5: error: 'nuevo' undeclared (first use in this function)
     nuevo = createNode(data);
     ^~~~~
list.c:78:5: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
50fde04
vi., 18 de mar. de 2022 15:15:19: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
list.c:78:11: error: unused variable 'nuevo' [-Werror=unused-variable]
     Node *nuevo = createNode(data);
           ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
29d4ea8
vi., 18 de mar. de 2022 15:17:00: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:77:29: error: 'return' with a value, in function returning void [-Werror]
     if(list == NULL) return NULL;
                             ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
5ebc7b8
vi., 18 de mar. de 2022 15:17:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
51ad7a1
vi., 18 de mar. de 2022 15:22:57: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:87:5: error: expected expression before '}' token
     }
     ^
list.c:87:5: error: 'return' with a value, in function returning void [-Werror]
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
98e62db
vi., 18 de mar. de 2022 15:23:18: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
06d2ef0
